# testinfra

./: setup.cfg
testinfra/: plugin.py
testinfra/backend/: __init__.py
