[bdist_wheel]
universal = 1

[metadata]
name = testinfra
author = Philippe Pepiot
author-email = phil@philpep.org
summary = Test infrastructures
home-page = http://github.com/philpep/testinfra
description-file = README.rst
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Software Development :: Testing
    Topic :: System :: Systems Administration
    Framework :: Pytest


[files]
packages =
    testinfra

[entry_points]
console_scripts =
    testinfra = testinfra.main:main
pytest11 =
    pytest11.testinfra = testinfra.plugin

testinfra.backend =
    local = testinfra.backend.local:LocalBackend
    ssh = testinfra.backend.ssh:SshBackend
    safe-ssh = testinfra.backend.ssh:SafeSshBackend
    paramiko = testinfra.backend.paramiko:ParamikoBackend
    salt = testinfra.backend.salt:SaltBackend
    docker = testinfra.backend.docker:DockerBackend
    ansible = testinfra.backend.ansible:AnsibleBackend
    kubectl = testinfra.backend.kubectl:KubectlBackend


[tool:pytest]
norecursedirs = .tox .git .local *.egg build

[pbr]
skip_authors = True
skip_changelog = True
